package com.example.forecastapp

/**
 * 気象庁予報区コード
 * - https://anko.education/webapi/jma
 * - https://www.jma.go.jp/bosai/forecast/#area_type=offices&area_code=130000
 */
object Prefectures{
    // 府県予報区 to コード
    val maps: Map<String, Int> = mapOf(
        "宗谷地方" to 11000,
        "上川・留萌地方" to 12000,
        "網走・北見・紋別地方" to 13000,
        "釧路・根室地方" to 14100,
        "胆振・日高地方" to 15000,
        "石狩・空知・後志地方" to 16000,
        "渡島・檜山地方" to 17000,
        "青森県" to 20000,
        "秋田県" to 50000,
        "岩手県" to 30000,
        "宮城県" to 40000,
        "山形県" to 60000,
        "福島県" to 70000,
        "茨城県" to 80000,
        "茨城県" to 90000,
        "群馬県" to 100000,
        "埼玉県" to 110000,
        "東京都" to 130000,
        "千葉県" to 120000,
        "神奈川県" to 140000,
        "長野県" to 200000,
        "山梨県" to 190000,
        "静岡県" to 220000,
        "愛知県" to 230000,
        "岐阜県" to 210000,
        "三重県" to 240000,
        "新潟県" to 150000,
        "富山県" to 160000,
        "石川県" to 170000,
        "福井県" to 180000,
        "石川県" to 250000,
        "京都府" to 260000,
        "大阪府" to 270000,
        "兵庫県" to 280000,
        "奈良県" to 290000,
        "和歌山県" to 300000,
        "岡山県" to 330000,
        "広島県" to 340000,
        "島根県" to 320000,
        "鳥取県" to 310000,
        "徳島県" to 360000,
        "香川県" to 370000,
        "愛媛県" to 380000,
        "高知県" to 390000,
        "山口県" to 350000,
        "福岡県" to 400000,
        "大分県" to 440000,
        "長崎県" to 420000,
        "佐賀県" to 410000,
        "熊本県" to 430000,
        "宮崎県" to 450000,
        "鹿児島県" to 460100,
        "沖縄本島地方" to 471000,
        "大東島地方" to 472000,
        "大東島地方" to 473000,
        "八重山地方" to 474000
    )
}